--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
                         <a href="mailto:name@email.com">a111070020@mail.shu.edu.tw</a>
                     </div>
                     <p class="lead mb-5">我喜歡在連假時回家鄉跟朋友們打羽球，打球除了能放鬆身心靈以外也能在球場上認識各式各樣的人</p>
+                    <p class="lead mb-5">I like to go back to my hometown to play badminton with my friends during the holidays. In addition to relaxing my body and mind, I can also meet all kinds of people on the court</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
