更改icon圖示 網頁顏色 照片

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                     <p class="lead mb-5">我喜歡在連假時回家鄉跟朋友們打羽球，打球除了能放鬆身心靈以外也能在球場上認識各式各樣的人</p>
                     <p class="lead mb-5">I like to go back to my hometown to play badminton with my friends during the holidays. In addition to relaxing my body and mind, I can also meet all kinds of people on the court</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="" href=""><i class=""></i></a>
+                        <a class="social-icon" href="file:///C:/Users/l406/Documents/GitHub/Automne1050.github.io/index.html"target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://www.instagram.com/cx105068/?next=%2F"target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/profile.php?id=100009285758493"target="_blank"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
@@ -68,7 +68,9 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">世新大學</h3>
+                            <h3 class="mb-0">世新大學
+                                <a class="expedu-icon" href="https://www.shu.edu.tw/"target="_blank"><i class="fa-sharp fa-solid fa-school"></i></a>
+                            </h3>
                             <div class="subheading mb-3">SHIN HSIN UNIVERSITY</div>
                             <p></p>
                         </div>
@@ -76,7 +78,9 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">國立台東女子高級中學</h3>
+                            <h3 class="mb-0">國立台東女子高級中學
+                                <a class="expedu-icon" href="https://www.tgsh.ttct.edu.tw/ischool/publish_page/0/"target="_blank"><i class="fa-sharp fa-solid fa-school"></i></a>
+                            </h3>
                             <div class="subheading mb-3">National Taitung Girls' Senior High School</div>
                             <p></p>
                         </div>
