--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <p class="lead mb-5">I like to go back to my hometown to play badminton with my friends during the holidays. In addition to relaxing my body and mind, I can also meet all kinds of people on the court</p>
                     <div class="social-icons">
                         <a class="" href=""><i class=""></i></a>
-                        <a class="social-icon" href="file:///C:/Users/l406/Documents/GitHub/Automne1050.github.io/index.html"target="_blank"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/Automne1050"target="_blank"><i class="fab fa-github"></i></a>
                         <a class="social-icon" href="https://www.instagram.com/cx105068/?next=%2F"target="_blank"><i class="fa-brands fa-instagram"></i></a>
                         <a class="social-icon" href="https://www.facebook.com/profile.php?id=100009285758493"target="_blank"><i class="fab fa-facebook-f"></i></a>
                     </div>
@@ -63,6 +63,30 @@
             </section>
             <hr class="m-0" />
             <!-- Experience-->
+            <section class="resume-section" id="education">
+                <div class="resume-section-content">
+                    <h2 class="mb-5">Experience</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">班長</h3>
+                            <div class="subheading mb-3">負責管理整個班的一切事務</div>
+                            <div></div>
+                            <p></p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2021 - June 2022</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">羽球教練</h3>
+                            <div class="subheading mb-3">比賽前教導同學羽球相關小技巧</div>
+                            <p></p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">March 2020 - June 2021</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!-- Education-->
             <section class="resume-section" id="experience">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
@@ -103,32 +127,8 @@
                         <div class="flex-shrink-0"><span class="text-primary"></span></div>
                     </div>
                 </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Education-->
-            <section class="resume-section" id="education">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">班長</h3>
-                            <div class="subheading mb-3">負責管理整個班的一切事務</div>
-                            <div></div>
-                            <p></p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2021 - June 2022</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">羽球教練</h3>
-                            <div class="subheading mb-3">比賽前教導同學羽球相關小技巧</div>
-                            <p></p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2020 - June 2021</span></div>
-                    </div>
-                </div>
-            </section>
-            <hr class="m-0" />
+               </section>
+               <hr class="m-0" />
             <!-- Skills-->
             <section class="resume-section" id="skills">
                 <div class="resume-section-content">
