--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolios">Portfolios</a></li>
                 </ul>
             </div>
         </nav>
@@ -52,7 +52,7 @@
                         <a href="mailto:name@email.com">a111070020@mail.shu.edu.tw</a>
                     </div>
                     <p class="lead mb-5">我喜歡在連假時回家鄉跟朋友們打羽球，打球除了能放鬆身心靈以外也能在球場上認識各式各樣的人</p>
-                    <p class="lead mb-5">I like to go back to my hometown to play badminton with my friends during the holidays. In addition to relaxing my body and mind, I can also meet all kinds of people on the court</p>
+                    <p class="lead mb-5">I like to go back to my hometown to play badminton with my friends during the holidays. In addition to relaxing my body and mind, I can also meet all kinds of people on the court.</p>
                     <div class="social-icons">
                         <a class="" href=""><i class=""></i></a>
                         <a class="social-icon" href="https://github.com/Automne1050"target="_blank"><i class="fab fa-github"></i></a>
@@ -135,36 +135,28 @@
                     <h2 class="mb-5">Skills</h2>
                     <div class="subheading mb-3">Programming Languages & Tools</div>
                     <ul class="list-inline dev-icons">
-                        <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-js-square"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-angular"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-react"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-node-js"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-sass"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-less"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-wordpress"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-gulp"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-grunt"></i></li>
-                        <li class="list-inline-item"><i class="fab fa-npm"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-python"></i></li>
                     </ul>
-                    <div class="subheading mb-3">Workflow</div>
+                    <div class="subheading mb-3">Specialties</div>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mobile-First, Responsive Design
+                            <span class="fa-li"><i class="fa-solid fa-network-wired"></i></span>
+                            可畫◎Canva
                         </li>
+                        ------------------------------------------------------------------------------------------------------------------------
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Browser Testing & Debugging
+                            <span class="fa-li"><i class="fa-brands fa-battle-net"></i></span>
+                            故事地圖◎ArcGIS StoryMaps
                         </li>
+                        ------------------------------------------------------------------------------------------------------------------------
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Cross Functional Teams
+                            <span class="fa-li"><i class="fa-brands fa-hive"></i></span>
+                            資訊行銷◎Information marketing
                         </li>
+                        ------------------------------------------------------------------------------------------------------------------------
                         <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Agile Development & Scrum
+                            <span class="fa-li"><i class="fa-solid fa-circle-nodes"></i></span>
+                            Photoshop數位影像處理◎Adobe Photoshop
                         </li>
                     </ul>
                 </div>
@@ -174,53 +166,40 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
-                    <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                    <p>除了打羽球以外我喜歡在合適的時間跟爬友一起到花博公園參加爬蟲展，欣賞及觀察來自不同縣市的爬蟲</p>
+                    <p class="mb-0">In addition to playing badminton, I like to go to the Huabo Park to participate in the reptile exhibition with my reptile friends at the right time, to appreciate and observe reptiles from different counties and cities.</p>
+                    <ul class="list-inline dev-icons">
+                        <li class="list-inline-item"><i class="fa-solid fa-bell"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-table-tennis-paddle-ball"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-staff-snake"></i></li>
+                        <li class="list-inline-item"><i class="fa-regular fa-image"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-pen-nib"></i></li>
+                        <li class="list-inline-item"><i class="fa-solid fa-arrow-up-from-ground-water"></i></li>
+                        <li class="list-inline-item"><i class="fa-brands fa-hornbill"></i></li>
+                      </ul>
                 </div>
             </section>
             <hr class="m-0" />
-            <!-- Awards-->
-            <section class="resume-section" id="awards">
+            <!-- Portfolios-->
+            <section class="resume-section" id="portfolios">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Portfolios</h2>
                     <ul class="fa-ul mb-0">
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Google Analytics Certified Developer
+                            <a class="fa-li" href="https://youtu.be/0kcdaZprUiw" target="_blank"><i class="fa-solid fa-utensils"></i></a>
+                            台東美食介紹◎影音
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            Mobile Web Specialist - Google Certification
+                            <a class="fa-li" href="https://drive.google.com/file/d/1D7uimD0DN9lprhvEMTg3tCUGFcNjUXgb/view?usp=share_link" target="_blank"><i class="fa-solid fa-user"></i></a>
+                            全英文報告◎word+ppt+影音
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+                            <a class="fa-li" href="https://www.google.com/maps/d/edit?mid=1dZYC3HxNbdWdr2wMpj5yMFgsFzEKLqd6&usp=sharing" target="_blank"><i class="fa-solid fa-seedling"></i></a>
+                           四維路上的植物◎google map
                         </li>
                         <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            2
-                            <sup>nd</sup>
-                            Place - University of Colorado Boulder - Emerging Tech Competition 2008
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            1
-                            <sup>st</sup>
-                            Place - James Buchanan High School - Hackathon 2006
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-                            3
-                            <sup>rd</sup>
-                            Place - James Buchanan High School - Hackathon 2005
+                            <a class="fa-li" href="https://drive.google.com/file/d/1hAP_5HnBCYz_k8lVK6hqhrhqmogj_wwN/view?usp=sharing" target="_blank"><i class="fa-solid fa-egg"></i></a>
+                            如何區分生蛋與熟蛋◎ppt+影音
                         </li>
                     </ul>
                 </div>
