--- a/index.html
+++ b/index.html
@@ -184,6 +184,9 @@
             <section class="resume-section" id="portfolios">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Portfolios</h2>
+                    <div class="mb-2">
+                      <p>作品的<a href="portfolios.html">詳細介紹</a></p>
+                    </div>
                     <ul class="fa-ul mb-0">
                         <li>
                             <a class="fa-li" href="https://youtu.be/0kcdaZprUiw" target="_blank"><i class="fa-solid fa-utensils"></i></a>
