--- a/portfolios.html
+++ b/portfolios.html
@@ -35,11 +35,11 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">Link</a>
+                        <a class="nav-link" href="#">https://github.com/Automne1050/Automne1050.github.io</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Dropdown
+                      各種作品
                         </a>
                         <ul class="dropdown-menu">
                           <li><a class="dropdown-item" href="#food">台東美食介紹◎影音</a></li>
