--- a/portfolios.html
+++ b/portfolios.html
@@ -35,7 +35,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                       </li>
                       <li class="nav-item">
-                        <a class="nav-link" href="#">https://github.com/Automne1050/Automne1050.github.io</a>
+                        <a class="nav-link" href="https://github.com/Automne1050/Automne1050.github.io">Link</a>
                       </li>
                       <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
